@@ -1,7 +1,7 @@
 m4_divert_push([PREPARE_TESTS])
 [
-# Strips out uninteresting parts of ovs-ofctl output, as well as parts
-# that vary from one run to another.
+# Strips out uninteresting parts of flow dump outputs (ofctl/dpctl), as well
+# as parts that vary from one run to another.
 ofctl_strip () {
     sed '
 s/ (xid=0x[0-9a-fA-F]*)//
@@ -13,6 +13,7 @@ s/ n_bytes=0,//
 s/ idle_age=[0-9]*,//
 s/ hard_age=[0-9]*,//
 s/dp_hash=0x[0-9a-f]*\//dp_hash=0x0\//
+s/dp_hash([0-9a-fx/]*)/dp_hash(0x0)/
 s/recirc_id=0x[0-9a-f]*,/recirc_id=0x0,/
 s/[0-9][0-9][0-9][0-9]-[0-9][0-9]-[0-9][0-9]T[0-9][0-9]:[0-9][0-9]:[0-9][0-9]Z|//
 s/dir\/[0-9]*\/br0.mgmt/dir\/XXXX\/br0.mgmt/
@@ -138,6 +139,10 @@ strip_duration () {
 strip_ufid () {
     sed 's/mega_ufid:[[-0-9a-f]]* //
     s/ufid:[[-0-9a-f]]* //'
+}
+
+match_ufid () {
+    grep -oE 'ufid:[[-0-9a-f]]+' | sort -u
 }
 
 # Strips packets: and bytes: from output
