@@ -9,6 +9,9 @@ Post-v3.3.0
      https://github.com/openvswitch/ovs.git
    - DPDK:
      * OVS validated with DPDK 23.11.1.
+   - ovs-appctl:
+     * Added 'upcall/dump-ufid-rules' to output the set of OpenFlow rules and
+       groups that contributed to the creation of a specific datapath flow.
 
 
 v3.3.0 - 16 Feb 2024
